@startuml builtin_command_core
title Builtin Command Core: Package Layers
' Review baseline: pi-mono-java@11b21f95 used a flat runtimeapi.command package.
' Source evidence: pi-mono-java@15aa0bf1 modules/coding-agent-cli/src/main/java/com/campusclaw/codingagent/runtimeapi/service/command/CompositeCommandRegistry.java resolve.
' Source evidence: pi-mono-java@15aa0bf1 modules/coding-agent-cli/src/main/java/com/campusclaw/codingagent/runtimeapi/command/builtin/BuiltinCommandDefinition.java describe.
' Source evidence: pi-mono-java@15aa0bf1 modules/coding-agent-cli/src/main/java/com/campusclaw/codingagent/runtimeapi/command/definition/CommandDefinition.java describe.
' Source evidence: pi-mono-java@15aa0bf1 modules/coding-agent-cli/src/main/java/com/campusclaw/codingagent/runtimeapi/command/execution/CommandExecutionContext.java catalog, session.
' Source evidence: pi-mono@4af9d21d packages/coding-agent/src/core/agent-session.ts _tryExecuteExtensionCommand.
' Observed behavior: one catalog preserves descriptor and definition identity; behavior is unchanged by moving packages.
' Java architecture change: separate service, DTO, and core packages; generic definitions never depend on Builtin definitions.
' Design reason: the catalog references generic definitions, avoiding a Builtin -> execution -> catalog -> Builtin cycle.
' Alignment baseline: pi-mono-java@7b3769a5eabe2d131af3023631d7ad24e6d9a9e1.
' Source evidence: modules/coding-agent-cli/src/main/java/com/campusclaw/codingagent/runtimeapi/service/command/readonly/AgentHelpQueryService.java query.
' Observed behavior: Help reads Agent metadata, not the catalog; context preserves definition and session identity only.
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
set namespaceSeparator none
package "runtimeapi.service.command" {
  class CompositeCommandRegistry <<singleton>>
  class BuiltinCommandSource <<singleton>>
  class SkillCommandSource <<singleton>>
}
package "runtimeapi.command.source" {
  interface CommandDefinitionSource {
    kind()
    list(session)
    definitions(session)
  }
}
package "runtimeapi.command.builtin" {
  interface BuiltinCommandContributor
  class BuiltinCommandDefinition
}
package "runtimeapi.command.execution" {
  interface CommandAdmissionPolicy
  interface CommandHandler
  class CommandExecutionContext <<request>>
  note right of CommandAdmissionPolicy
  Preview only.
  Domain writes recheck under locks.
  end note
}
package "runtimeapi.command.catalog" {
  class ResolvedCommandCatalog <<request>>
}
package "runtimeapi.command.definition" {
  interface CommandDefinition
  class DisplayCommandDefinition
  note bottom of CommandDefinition
  No dependency on Builtin definitions or handlers.
  No HTTP route or placeholder Controller / VO.
  end note
}
package "runtimeapi.dto.command" {
  class ResolvedCommandDTO <<immutable>>
  class CommandSessionSnapshotDTO <<immutable>>
  interface CommandResultDTO
}
package "runtimeapi.command.type" {
  enum CommandKind
  enum CommandInputMode
}

CompositeCommandRegistry o-- "0..*" CommandDefinitionSource
BuiltinCommandSource ..|> CommandDefinitionSource
SkillCommandSource ..|> CommandDefinitionSource
BuiltinCommandSource o-- "0..*" BuiltinCommandContributor : startup unique names
BuiltinCommandContributor --> BuiltinCommandDefinition
BuiltinCommandDefinition ..|> CommandDefinition
DisplayCommandDefinition ..|> CommandDefinition
BuiltinCommandDefinition *-- CommandAdmissionPolicy
BuiltinCommandDefinition *-- CommandHandler
CommandHandler --> CommandExecutionContext
CommandHandler --> CommandResultDTO
CommandDefinitionSource --> CommandDefinition
CompositeCommandRegistry --> ResolvedCommandCatalog : filter before resolving
ResolvedCommandCatalog o-- "0..*" CommandDefinition : preserve identity
ResolvedCommandCatalog *-- "0..*" ResolvedCommandDTO : describe once
ResolvedCommandCatalog *-- CommandSessionSnapshotDTO
CommandExecutionContext --> ResolvedCommandCatalog : definition and session identity
CommandDefinition --> ResolvedCommandDTO
ResolvedCommandDTO --> CommandKind
BuiltinCommandDefinition --> CommandInputMode
@enduml
